<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="am.xtech.app16.presentation.ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/lay_home_qr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_marginBottom="56dp"
                android:visibility="visible"
                android:id="@+id/iv_home_qr"
                android:layout_gravity="center"
                android:layout_width="200dp"
                android:layout_height="200dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_home_application"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/button_application" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_home_finish"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/button_finish" />

        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/lay_home_create_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_marginTop="64dp"
                android:layout_marginBottom="32dp"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_group_26"
                />

            <TextView
                android:id="@+id/tv_home_title"
                android:layout_marginBottom="32dp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textColor="@color/colorTextBold"
                android:textSize="19sp"
                tools:text="bar galust "
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_home_add_new"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/button_add_new" />

            <com.google.android.material.button.MaterialButton
                android:textColor="@color/colorPrimary"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:strokeColor="@color/colorPrimary"
                android:id="@+id/btn_home_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/button_history" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>